# vote-svc

./: .env.example  .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/candidate/delivery/http/: get_candidate.rs  handler.rs  mod.rs
src/candidate/domain/: entities.rs  errors.rs  mod.rs  repository.rs
src/candidate/repository/: mod.rs  model.rs  postgres.rs
src/candidate/usecase/: get.rs  init.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: config.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/http/: server.rs
src/utils/: app.rs  mod.rs  response.rs
