[package]
name = "vote-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde"] }
actix-rt = "2.11.0"
mockall = "0.14.0"
config = "0.15.19"
dotenvy = "0.15.7"

